--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styleheader.css" />
+    <link rel="stylesheet" href="/stylebody.css" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -32,5 +34,12 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </header>
+
+    <section id="acasa" data-text="Acasa"></section>
+    <section id="despre" data-text="Section2"></section>
+    <section id="cluburi" data-text="Section3"></section>
+    <section id="presa" data-text="Section4"></section>
+    <section id="doneaza" data-text="Section5"></section>
+    <section id="contact" data-text="Section6"></section>
   </body>
 </html>
