adding an image to section 1

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
       </ul>
     </header>
 
-    <section id="acasa" data-text="Acasa"></section>
+    <section id="acasa" data-text="">
+      <img id="img-home" src="pictures\children1.jpg" alt="group of children" />
+    </section>
+
     <section id="despre" data-text="Section2"></section>
     <section id="cluburi" data-text="Section3"></section>
     <section id="presa" data-text="Section4"></section>
